# snake_poo

./: README.md
Snake_poo/: CMakeLists.txt  main.cpp  makefile  snake
Snake_poo/include/: Board.h  Snake.h  config.h  display.h  food.h  game.h  internals.h
Snake_poo/snake.dSYM/Contents/Resources/DWARF/: snake
Snake_poo/src/: board.cpp  display.cpp  food.cpp  game.cpp  internals.cpp  snake.cpp
